changed html to fit the new domain at heroku

--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
         <h1>Welcome to the URL Shortening Microservice.</h1>
         <h2>Example usage:</h2>
         <p>input - creating little url</p>
-        <code><a href="https://fcc-api-projects-wztan.c9users.io/little-url/new/https://www.google.com">https://fcc-api-projects-wztan.c9users.io/little-url/new/https://www.google.com</a></code>
+        <code><a href="http://maketiny.herokuapp.com/">http://maketiny.herokuapp.com//new/https://www.google.com</a></code>
         <br>
         <p>output</p>
-        <code>{"original_url":"https://www.google.com","short_url":"https://fcc-api-projects-wztan.c9users.io/little-url/11"}</code>
+        <code>{"original_url":"https://www.google.com","short_url":"http://maketiny.herokuapp.com/3"}</code>
         <p>output (invalid input)</p>
         <code>invalid output</code>
         <p>then visit the newly created little url</p>
-        <code><a href="https://fcc-api-projects-wztan.c9users.io/little-url/11">https://fcc-api-projects-wztan.c9users.io/little-url/11</a></code>
+        <code><a href="http://maketiny.herokuapp.com/3">http://maketiny.herokuapp.com/3</a></code>
         <p>made by Wei-Zhong Tan (2016)</p>
     </body>
 </html>
