--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <h1>Welcome to the URL Shortening Microservice.</h1>
         <h2>Example usage:</h2>
         <p>input - creating little url</p>
-        <code><a href="http://maketiny.herokuapp.com/">http://maketiny.herokuapp.com//new/https://www.google.com</a></code>
+        <code><a href="http://maketiny.herokuapp.com/new/https://www.google.com">http://maketiny.herokuapp.com/new/https://www.google.com</a></code>
         <br>
         <p>output</p>
         <code>{"original_url":"https://www.google.com","short_url":"http://maketiny.herokuapp.com/3"}</code>
